# pyConfNVim

./: README.md  pyproject.toml
src/pyConfNVim/: LocalContext.py  Parse.py  __configure__.py  __init__.py  main.py  tools.py
src/pyConfNVim/TypeDef/: Config.py  Context.py  Lua.py  Mappings.py  NVimConfig.py
src/pyConfNVim/config/lib/: templates.conf
src/pyConfNVim/ui/qt6/: mod_AppCtl.py  mod_TreeCtl.py  mod_nvim.py  mod_path.py  qtbrowser.py
tests/: test_TypeDef_Config.py
tests/testdata/config/keymaps.conf/startup.conf/: 100_testkeymap.conf
tests/testdata/config/testcat.conf/: test_Config.conf
